--- a/time_left_in_2020.html
+++ b/time_left_in_2020.html
@@ -21,13 +21,13 @@
             border-radius: 5px;
         }
         #days{
-            background-color:#0f4d4f;
+            background-color:#01c3740;
         }
         #hours{
-            background-color:#4CAF50;
+            background-color:#175270;
         }
         #minutes{
-            background-color:#76250b;
+            background-color:#016594;
         }
         h2{
             display: inline-block;
