--- a/time_left_in_2020.html
+++ b/time_left_in_2020.html
@@ -21,7 +21,7 @@
             border-radius: 5px;
         }
         #days{
-            background-color:##0f4d4f;
+            background-color:#0f4d4f;
         }
         #hours{
             background-color:#175270;
