--- a/time_left_in_2020.html
+++ b/time_left_in_2020.html
@@ -21,13 +21,13 @@
             border-radius: 5px;
         }
         #days{
-            background-color:#2e3244;
+            background-color:#0f4d4f;
         }
         #hours{
-            background-color:#175270;
+            background-color:#4CAF50;
         }
         #minutes{
-            background-color:#016594;
+            background-color:#76250b;
         }
         h2{
             display: inline-block;
