--- a/time_left_in_2020.html
+++ b/time_left_in_2020.html
@@ -11,7 +11,7 @@
         body{
             text-align: center;
             font-family: 'Fjalla One', sans-serif;
-            background-color: #202330;
+            background-color: #f6f7f1;
         }
         .box{
             display: inline-block;
