--- a/time_left_in_2020.html
+++ b/time_left_in_2020.html
@@ -16,7 +16,7 @@
         .box{
             display: inline-block;
             display: inline-block;
-            color: #f6f7f1;
+            color: #fff;
             padding: 10px;
             border-radius: 5px;
         }
