--- a/greetings-date-clock.html
+++ b/greetings-date-clock.html
@@ -1,33 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@babykoya 
-ShoroukAziz
-/
-notion_widgets
-2
-21129
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-notion_widgets/greetings-date-clock.html
-@ShoroukAziz
-ShoroukAziz Update greetings-date-clock.html
-Latest commit b32ee13 on 8 Oct
- History
- 1 contributor
-171 lines (141 sloc)  3.1 KB
-  
 <!-- original : https://codepen.io/SeanNorton/pen/LWBXQL -->
 <!DOCTYPE html>
 <html lang="en">
@@ -70,7 +40,7 @@ h1 {
 .card {
     padding: 10px 25px 10px 25px;
     border-radius: 10px;
-    background: #553c4e;
+    background: #016594;
     width: 85vw;
     color: #fff;
     display: inline-block;
@@ -157,11 +127,11 @@ else{
 }
 hrs = today.getHours();
 if (hrs < 12)
-        greet = 'Good Morning  ';
+        greet = 'Good Morning Mehvish ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
+        greet = 'Good Afternoon Mehvish ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
+        greet = 'Good Evening Mehvish ';
 // console.log(today.toLocaleTimeString());
 document.getElementById('greet').innerHTML = greet;
 document.getElementById('hour').innerHTML = hour;
